--- a/portfolio.html
+++ b/portfolio.html
@@ -56,17 +56,30 @@
     <div class="conteiner">
 <ul class="examples">
     <li class="examples-li">
-        <a  href="" class="examples-link">
-        <img src="images/port1.jpg" alt="ноутбук" width="370" height="294" class="examples-photo">
+        <a href="" class="examples-link">
+       <div class="examples-link-img">
+                <img src="images/port1.jpg" alt="ноутбук" width="370" height="294" class="examples-photo">
+                <div class="examples-modal-text">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                        сведения о компании или частном лице.</p>
+                </div>
+       </div>
         <div class="examples-text-content">
             <h2 class="examples-title">Технокряк</h2>
             <p class="examples-text">Веб-сайт</p>
         </div>
+       
         </a>
     </li>
     <li class="examples-li">
         <a href="" class="examples-link">
-            <img src="images/port2.jpg" alt="два баскетболиста" width="370" height="294" class="examples-photo">
+            <div class="examples-link-img">
+                <img src="images/port2.jpg" alt="два баскетболиста" width="370" height="294" class="examples-photo">
+                <div class="examples-modal-text">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                        сведения о компании или частном лице.</p>
+                </div>
+            </div>
             <div class="examples-text-content">
                 <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
                 <p class="examples-text">Дизайн</p>
@@ -75,7 +88,13 @@
     </li>
     <li class="examples-li">
         <a href="" class="examples-link">
-            <img src="images/port3.jpg" alt="логотип рыбного ресторана" width="370" height="294" class="examples-photo">
+            <div class="examples-link-img">
+                <img src="images/port3.jpg" alt="логотип рыбного ресторана" width="370" height="294" class="examples-photo">
+                <div class="examples-modal-text">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                        сведения о компании или частном лице.</p>
+                </div>
+            </div>
             <div class="examples-text-content">
                 <h2 class="examples-title">Ресторан Seafood</h2>
                 <p class="examples-text">Приложение</p>
@@ -84,7 +103,13 @@
     </li>
     <li class="examples-li">
         <a href="" class="examples-link">
-            <img src="images/port4.jpg" alt="наушники" width="370" height="294" class="examples-photo">
+            <div class="examples-link-img">
+                <img src="images/port4.jpg" alt="наушники" width="370" height="294" class="examples-photo">
+                <div class="examples-modal-text">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                        сведения о компании или частном лице.</p>
+                </div>
+            </div>
             <div class="examples-text-content">
                 <h2 class="examples-title">Проект Prime</h2>
                 <p class="examples-text">Маркетинг</p>
@@ -93,7 +118,13 @@
     </li>
     <li class="examples-li">
         <a href="" class="examples-link">
-            <img src="images/port5.jpg" alt="коробки" width="370" height="294" class="examples-photo">
+           <div class="examples-link-img">
+               <img src="images/port5.jpg" alt="коробки" width="370" height="294" class="examples-photo">
+            <div class="examples-modal-text">
+            <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                сведения о компании или частном лице.</p>
+            </div>
+        </div>
             <div class="examples-text-content">
                 <h2 class="examples-title">Проект Boxes</h2>
                 <p class="examples-text">Приложение</p>
@@ -102,7 +133,13 @@
     </li>
     <li class="examples-li">
         <a href="" class="examples-link">
-            <img src="images/port6.jpg" alt="компьютер" width="370" height="294" class="examples-photo">
+            <div class="examples-link-img">
+                <img src="images/port6.jpg" alt="компьютер" width="370" height="294" class="examples-photo">
+                <div class="examples-modal-text">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                        сведения о компании или частном лице.</p>
+                </div>
+            </div>
             <div class="examples-text-content">
                 <h2 class="examples-title">Inspiration has no Borders</h2>
                 <p class="examples-text">Веб-сайт</p>
@@ -111,7 +148,13 @@
     </li>
     <li class="examples-li">
         <a href="" class="examples-link">
-            <img src="images/port7.jpg" alt="книга" width="370" height="294" class="examples-photo">
+            <div class="examples-link-img">
+                <img src="images/port7.jpg" alt="книга" width="370" height="294" class="examples-photo">
+                <div class="examples-modal-text">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                        сведения о компании или частном лице.</p>
+                </div>
+            </div>
             <div class="examples-text-content">
                 <h2 class="examples-title">Издание Limited Edition</h2>
                 <p class="examples-text">Дизайн</p>
@@ -120,7 +163,13 @@
     </li>
     <li class="examples-li">
         <a href="" class="examples-link">
-            <img src="images/port8.jpg" alt="бирка" width="370" height="294" class="examples-photo">
+            <div class="examples-link-img">
+                <img src="images/port8.jpg" alt="бирка" width="370" height="294" class="examples-photo">
+                <div class="examples-modal-text">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                        сведения о компании или частном лице.</p>
+                </div>
+            </div>
             <div class="examples-text-content">
                 <h2 class="examples-title">Проект LAB</h2>
                 <p class="examples-text">Маркетинг</p>
@@ -129,7 +178,13 @@
     </li>
     <li class="examples-li">
         <a href="" class="examples-link">
-            <img src="images/port9.jpg" alt="ноутбук с приложением" width="370" height="294" class="examples-photo">
+            <div class="examples-link-img">
+                <img src="images/port9.jpg" alt="ноутбук с приложением" width="370" height="294" class="examples-photo">
+                <div class="examples-modal-text">
+                    <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                        сведения о компании или частном лице.</p>
+                </div>
+            </div>
             <div class="examples-text-content">
                 <h2 class="examples-title">Growing Business</h2>
                 <p class="examples-text">Приложение</p>
